[package]
name = "lndups"
version = "0.2.0"
edition = "2024"
description = "Hardlink duplicate files"
authors = ["George H <georgeh124v2@gmail.com>"]
repository = "https://git.ascendforever.com/ascendforever/lndups"
license = "GPL-3.0-or-later"

[profile.release]
lto = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rayon = "1.11"
shlex = "1.3"
smallvec = "1.14"

unicode-width = "<0.1.14" # subdependency causing compilation failure
