[package]
name = "lndups"
version = "0.2.0"
edition = "2024"
description = "Hardlink duplicate files"
authors = ["George H <georgeh124v2@gmail.com>"]
repository = "https://git.ascendforever.com/ascendforever/lndups"
license = "GPL-3.0-or-later"

[package.metadata.deb]
maintainer = "George H <georgeh124v2@gmail.com>"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/lndups", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/lndups/README.md", "644"],
    ["LICENSE", "usr/share/doc/lndups/copyright", "644"]
]


[profile.release]
lto = true
codegen-units = 4
strip = "debuginfo"
overflow-checks = true


[dependencies]
clap = { version = "4.5", features = ["derive"] }
rayon = "1.11"
shlex = "1.3"
smallvec = "1.14"
